<resources>
    <string name="app_name">Amazon_KKH_Navigator</string>
    <string name="doctor">Doctor:&#160;</string>
    <string name="purpose">Purpose:&#160;</string>
    <string name="duration">Duration:&#160;</string>
    <string name="details">Other Details:&#160;</string>

    <string name="action1">Help, I am Lost!</string>
    <string name="action2">Cancel Appointment</string>
    <string name="action3">Payment Information</string>
    <string name="action4">Contact Support</string>

    <string name="main_activity">Dashboard</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_scan_qr">ScanQR</string>
    <string name="title_activity_login">Login</string>

    <string name="title_xml_payment">Payment</string>

    <string name="map_level_2"> 2 </string>
    <string name="map_level_1"> 1 </string>
    <string name="map_level_B1"> B1 </string>


    <!-- &#160; is a representation of whitespace in XML -->
    <!-- https://stackoverflow.com/questions/10862975/how-to-put-space-character-into-a-string-name-in-xml/10862999 -->

</resources>
